// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`whitespace '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`whitespace ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`whitespace '\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '\r' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '\r\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`whitespace '\r\n  \n' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "whitespace",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`optional whitespace '' conditional success tests AST matches snapshot 1`] = `""`;

exports[`optional whitespace ' ' conditional success tests AST matches snapshot 1`] = `" "`;

exports[`optional whitespace '\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '\r' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '\r\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`optional whitespace '\r\n  \n' conditional success tests AST matches snapshot 1`] = `
"
  
"
`;

exports[`optional whitespace 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`newline '\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '\r' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '\r\n' conditional success tests AST matches snapshot 1`] = `
"
"
`;

exports[`newline '\r\n  \n' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 1,
    "index": 2,
    "line": 2,
  },
}
`;

exports[`newline 'b' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "newline",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
